--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,8 @@
     "express": "^4.17.1",
     "mongoose": "^5.6.0",
     "mongoose-unique-validator": "^2.0.3",
-    "mongoose-validator": "^2.1.0"
+    "mongoose-validator": "^2.1.0",
+    "swagger-ui-express": "^4.0.6"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
